--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
                 </select>
             </div>
 
-            <button id="add-question-btn" class="accent">Soruyu Ekle</button>
+            <button id="add-question-btn" class="primary">Soruyu Ekle</button>
             
             <h2 style="margin-top: 40px; margin-bottom: 20px;">Quiz Soruları</h2>
             <div id="questions-list" class="questions-list">
